--- a/style.css
+++ b/style.css
@@ -6,35 +6,42 @@
 h1 {
     color: #D2872C;
     font-weight: bold;
+    padding-left: 30px;
 }
 
 
 .texto {
     position: absolute;
     text-align: left;
-    width: 60%;
-    margin-left: 10%
+    width: 50%;
+    margin-left: 12%;
+    
 }
 h2 {
     color: #766F68;
-    font-size: 3em;
+    font-size: 5em;
+    font-weight: bold;
     margin: 0;
+    
 }
 p {
     color: #766F68;
-    font-size: 1.5em;
+    font-size: 2em;
+    margin-right: 20%;
 }
 
 button {
     background-color: #D2872C;
     color: white;
+    font-size: 1.8em;
+    font-weight: bold;
     border: none;
-    border-radius: 0.3rem;
-    padding: 10px 20px;
+    border-radius: 1rem;
+    padding: 20px 105px;
 }
  .imagem{
      position: relative;
-     width: 70%;
+     width: 60%;
      float: right;
      background: url(./assets/team.jpg);
  }
