--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ main {
     text-align: left;
     width: 50%;
     margin-left: 12%;
-    
 }
 h2 {
     color: #766F68;
@@ -47,6 +46,7 @@ p {
     color: #766F68;
     font-size: 2em;
     margin-right: 20%;
+    padding-bottom: 50px;
 }
 
 button {
@@ -63,4 +63,41 @@ button {
      width: 60%;
      float: right;
      background: url(./assets/team.jpg);
+ }
+
+ @media only screen and (max-width: 1050px) {
+    h2 {
+        font-size: 3em;
+    }
+    p{
+        font-size: 1.5em;
+    } 
+ }
+
+ @media only screen and (max-width: 645px) {
+    .imagem {
+        float: none;
+        width: 90%;
+        margin-left: 5%;
+    }
+    .texto {
+        text-align: center;
+        width: 80%;
+
+    }
+    button {
+        font-size: 1.3em;
+        padding: 10px 55px;
+        margin-bottom: 10%;
+    }
+    h2 {
+        font-size: 2em;
+    }
+    p{
+        font-size: 1.3em;
+        margin-right: 0;
+    }
+    nav {
+        display: none;
+    }
  }
